Update Loading screen to use Indigitious logo only (removes Cru logo)  - move to LaunchImage.xib  - provide screen shot image of launch screen for iPhone 5s and under which can run older versions of iOS which still require images.  - same xib file for LaunchImage is used for the "Splash Screen too"  - old splash screen images removed

--- a/godtools/Views/GTSplashScreenView.xib
+++ b/godtools/Views/GTSplashScreenView.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1077" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,20 +11,30 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GT4_SplashScreen_" translatesAutoresizingMaskIntoConstraints="NO" id="IgV-5j-jQy">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Indigitous Logo" translatesAutoresizingMaskIntoConstraints="NO" id="t6K-OV-WaK">
+                    <rect key="frame" x="200" y="496" width="200" height="84"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="84" id="BJX-iJ-Nqm"/>
+                    </constraints>
+                </imageView>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="God Tools Logo" translatesAutoresizingMaskIntoConstraints="NO" id="oNv-ox-Vmt">
+                    <rect key="frame" x="100" y="20" width="400" height="330"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="330" id="UKj-Rp-EKF"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="IgV-5j-jQy" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="cBK-aU-nS9"/>
-                <constraint firstItem="IgV-5j-jQy" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ddj-mA-cAF"/>
-                <constraint firstAttribute="bottom" secondItem="IgV-5j-jQy" secondAttribute="bottom" id="r0K-aa-uQa"/>
-                <constraint firstAttribute="trailing" secondItem="IgV-5j-jQy" secondAttribute="trailing" id="z98-td-8H1"/>
+                <constraint firstAttribute="bottom" secondItem="t6K-OV-WaK" secondAttribute="bottom" constant="20" id="D0Z-9e-MhC"/>
+                <constraint firstItem="t6K-OV-WaK" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Gtp-b0-dZ4"/>
+                <constraint firstItem="oNv-ox-Vmt" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="UKS-DE-5wI"/>
+                <constraint firstItem="oNv-ox-Vmt" firstAttribute="centerX" secondItem="t6K-OV-WaK" secondAttribute="centerX" id="e26-k3-Yrl"/>
             </constraints>
         </view>
     </objects>
     <resources>
-        <image name="GT4_SplashScreen_" width="640" height="960"/>
+        <image name="God Tools Logo" width="400" height="292"/>
+        <image name="Indigitous Logo" width="200" height="147"/>
     </resources>
 </document>
